# RothC_Py

./: .gitignore  README.md  justfile  pyproject.toml  zensical.toml
docs/: index.md  plots.py  science.md
docs/API_Reference/: __init__.md  constants.md  containers.md  modernc.md  rothc.md
src/rothc_py/: RothC_Py.py  __init__.py  _version.py  constants.py  containers.py  main.py  model.py  modernc.py  original_file.py  rothc.py  utils.py
src/rothc_py/data/: modern.csv  modernc.csv
tests/: test_modern.py  test_modernc.py  test_rothc.py
