[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[project]
name = "rothc-py"
version = "0.1.0"
description = "Rothamsted soil carbon model (RothC) in Python"
readme = "README.md"
authors = [
    { name = "jmarshrossney", email = "17361029+jmarshrossney@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
rothc = "rothc_py.cli:main"

[dependency-groups]
dev = [
    {include-group = "test"},
    "ruff>=0.15.4",
]
test = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
]
