[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[project]
name = "rothc-py"
version = "1.9.0"
description = "Rothamsted soil carbon model (RothC) in Python"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["soil", "carbon", "rothc", "modelling", "soil-carbon", "ecosystem"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "jmarshrossney", email = "17361029+jmarshrossney@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    {include-group = "test"},
    "ruff>=0.15.4",
]
test = [
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
]
